Changelog for Poi
=================

    (name of developer listed in brackets)

Poi branch maurits-inline-response-adding
-----------------------------------------

- No __parent__ and __name__ for PoiIssue anymore.  Instead pass the
  issue as descriptions argument when firing the ObjectModifiedEvent
  for a response.  Works fine and needs no migration.
  [maurits]

- Use __parent__ and __name__ for responses.
  [maurits]

- Add "self.__parent__ = self.__name__ = None" to __init__() of
  PoiIssue.  Needs migration.  Not sure if that is the best solution
  to the problem that in the event handler for modified responses the
  issue has no acquisition context.

- Fire ObjectRemovedEvent when deleting a response and
  ObjectModifiedEvent when modifying it.
  [maurits]

- When adding something to an issue check that it really is an
  IResponse.
  [maurits]

- Add buttons and browser views for deleting and editing responses.
  [maurits]

- Add PoiMessageFactory.
  [maurits]

- Add method delete(id) for deleting responses.
  [maurits]

- In response adapter rename total to highest.
  [maurits]

- When FCKeditor is installed and an anonymous visitor adds a
  response, make sure this works by using the default html text area
  then.  Same change as in the FCKeditor code itself in r59427.
  [maurits]

- When in config.py DEFAULT_ISSUE_MIME_TYPE is set to text/html, use a
  wysiwyg field in the add response form.  Tested with kupu.  Haul the
  responses through portal_transforms and through linkDetection.
  [maurits]

- Give responses a type additional/clarification/reply.
  [maurits]

- Add browser test for adding a tracker, issue and response.
  [maurits]

- Unit test the response browser views.
  [maurits]

- Use aq_inner.aq_parent to get the parent of an issue.
  [maurits]

- Add unit tests for browser.response.voc2dict.
  [maurits]

- Add unit tests for the adapters.
  [maurits]

- Show border around responses, like in the original layout.
  [maurits]
