@@ -6,6 +6,10 @@ Changelog for Poi
 Poi branch maurits-inline-response-adding
 -----------------------------------------
 
+- Use the text of new style responses too for the SearchableText of an
+  issue.
+  [maurits]
+
 - No __parent__ and __name__ for PoiIssue anymore.  Instead pass the
   issue as descriptions argument when firing the ObjectModifiedEvent
   for a response.  Works fine and needs no migration.
